[project]
name = "invoicing-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.2",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "passlib[argon2]>=1.7.4",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pytz>=2025.2",
    "ruff>=0.14.0",
    "sqlalchemy>=2.0.43",
    "tenacity>=9.1.2",
    "types-passlib>=1.7.7.20250602",
]
